--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "aws-amplify": "^4.3.12",
+    "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^3.19.6",
     "react": "^17.0.2",
