--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/cli": "^7.6.9",
     "@aws-amplify/ui-react": "^2.1.6",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
