--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -43,6 +43,10 @@
     "AttendanceAppUserGroupAdminTable": {
       "service": "DynamoDB",
       "providerPlugin": "awscloudformation"
+    },
+    "AttendanceAppAttendancesTable": {
+      "service": "DynamoDB",
+      "providerPlugin": "awscloudformation"
     }
   },
   "function": {
