--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-timer-hook": "^3.0.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
