--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@aws-amplify/ui-react": "^2.1.6",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/lab": "^5.0.0-alpha.44",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.8",
@@ -13,6 +15,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "aws-amplify": "^4.3.12",
+    "date-fns": "^2.28.0",
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^3.19.6",
